# langchain-stock-research-assistant

./: .env.example  .gitignore  README.md  app.py  pyproject.toml  web_driver.py
core/: assistant.py  database.py  stock.py
demo/: demo_qa.py  demo_qa_simple.py  demo_stock_url.py
demo/demo_data/: stock.txt
examples/: demo_activeloop.py  demo_basic.py  demo_stock.py  demo_stock_from_url.py
examples/demo_data/: adani_stock.txt  amararaja.txt
helpers/: utilities.py
